--- a/.gitignore
+++ b/.gitignore
@@ -139,14 +139,6 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-/.idea/.gitignore
-/.idea/Futu_Algo.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/vcs.xml
-/.idea/copyright/Default_Copyright.xml
-/.idea/copyright/profiles_settings.xml
+/.idea
 /data/
 /config.ini
