--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,126 @@
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-bleach==3.2.1
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi==1.14.4
-chardet==4.0.0
-colorama==0.4.4
-cryptography==3.3.1
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-futu-api==3.27.2
-idna==2.10
-importlib-metadata==2.0.0
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-jdcal==1.4.1
-jedi==0.17.0
-Jinja2==2.11.2
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.7.0
-jupyterlab==2.2.6
-jupyterlab-pygments==0.1.2
-jupyterlab-server==1.2.0
-kiwisolver==1.3.0
-MarkupSafe==1.1.1
-matplotlib==3.3.2
-mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-notebook==6.1.5
-numpy==1.19.3
-olefile==0.46
-openpyxl==3.0.5
-packaging==20.8
-pandas==1.1.5
-pandocfilters==1.4.3
-parso==0.8.1
-pickleshare==0.7.5
-Pillow==8.0.1
-pip==20.3.3
-prometheus-client==0.9.0
-prompt-toolkit==3.0.8
-protobuf==3.5.1
-pycparser==2.20
-pycryptodome==3.9.9
-Pygments==2.7.3
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2020.4
-pywin32==227
-pywinpty==0.5.7
-pyzmq==20.0.0
-requests==2.25.1
-Send2Trash==1.5.0
-setuptools==51.0.0.post20201207
-simplejson==3.17.2
-sip==4.19.13
-six==1.15.0
-TA-Lib==0.4.19
-terminado==0.9.1
-testpath==0.4.4
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.2
-wcwidth==0.2.5
-webencodings==0.5.1
-wheel==0.36.2
-win-inet-pton==1.1.0
-wincertstore==0.2
-xlrd==2.0.1
-zipp==3.4.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+argon2-cffi=20.1.0=py38he774522_1
+async_generator=1.10=py_0
+attrs=20.3.0=pyhd3eb1b0_0
+backcall=0.2.0=py_0
+blas=1.0=mkl
+bleach=3.2.1=py_0
+brotlipy=0.7.0=py38h2bbff1b_1003
+ca-certificates=2020.12.8=haa95532_0
+certifi=2020.12.5=py38haa95532_0
+cffi=1.14.4=py38hcd4344a_0
+chardet=4.0.0=py38haa95532_1003
+colorama=0.4.4=pyhd3eb1b0_0
+cryptography=3.3.1=py38hcd4344a_0
+cycler=0.10.0=py38_0
+decorator=4.4.2=py_0
+defusedxml=0.6.0=py_0
+entrypoints=0.3=py38_0
+et_xmlfile=1.0.1=py_1001
+freetype=2.10.4=hd328e21_0
+futu-api=3.27.2=pypi_0
+icu=58.2=ha925a31_3
+idna=2.10=py_0
+importlib-metadata=2.0.0=py_1
+importlib_metadata=2.0.0=1
+intel-openmp=2020.2=254
+ipykernel=5.3.4=py38h5ca1d4c_0
+ipython=7.19.0=py38hd4e2768_0
+ipython_genutils=0.2.0=pyhd3eb1b0_1
+jdcal=1.4.1=py_0
+jedi=0.17.0=py38_0
+jinja2=2.11.2=py_0
+jpeg=9b=hb83a4c4_2
+json5=0.9.5=py_0
+jsonschema=3.2.0=py_2
+jupyter_client=6.1.7=py_0
+jupyter_core=4.7.0=py38haa95532_0
+jupyterlab=2.2.6=py_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_server=1.2.0=py_0
+kiwisolver=1.3.0=py38hd77b12b_0
+libpng=1.6.37=h2a8f88b_0
+libsodium=1.0.18=h62dcd97_0
+libtiff=4.1.0=h56a325e_1
+lz4-c=1.9.2=hf4a77e7_3
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+markupsafe=1.1.1=py38he774522_0
+matplotlib=3.3.2=haa95532_0
+matplotlib-base=3.3.2=py38hba9282a_0
+mistune=0.8.4=py38he774522_1000
+mkl=2020.2=256
+mkl-service=2.3.0=py38h196d8e1_0
+mkl_fft=1.2.0=py38h45dec08_0
+mkl_random=1.1.1=py38h47e9c7a_0
+msys2-conda-epoch=20160418=1
+nbclient=0.5.1=py_0
+nbconvert=6.0.7=py38_0
+nbformat=5.0.8=py_0
+nest-asyncio=1.4.3=pyhd3eb1b0_0
+notebook=6.1.6=py38haa95532_0
+numpy=1.19.3=pypi_0
+numpy-base=1.19.2=py38ha3acd2a_0
+olefile=0.46=py_0
+openpyxl=3.0.5=py_0
+openssl=1.1.1i=h2bbff1b_0
+packaging=20.8=pyhd3eb1b0_0
+pandas=1.2.0=py38hf11a4ad_0
+pandoc=2.11=h9490d1a_0
+pandocfilters=1.4.3=py38haa95532_1
+parso=0.8.1=pyhd3eb1b0_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=8.1.0=py38h4fa10fc_0
+pip=20.3.3=py38haa95532_0
+prometheus_client=0.9.0=pyhd3eb1b0_0
+prompt-toolkit=3.0.8=py_0
+protobuf=3.5.1=pypi_0
+pycparser=2.20=py_2
+pycryptodome=3.9.9=pypi_0
+pygments=2.7.3=pyhd3eb1b0_0
+pyopenssl=20.0.1=pyhd3eb1b0_1
+pyparsing=2.4.7=py_0
+pyqt=5.9.2=py38ha925a31_4
+pyrsistent=0.17.3=py38he774522_0
+pysocks=1.7.1=py38haa95532_0
+python=3.8.5=h5fd99cc_1
+python-dateutil=2.8.1=py_0
+pytz=2020.5=pyhd3eb1b0_0
+pywin32=227=py38he774522_1
+pywinpty=0.5.7=py38_0
+pyzmq=20.0.0=py38hd77b12b_1
+qt=5.9.7=vc14h73c81de_0
+requests=2.25.1=pyhd3eb1b0_0
+send2trash=1.5.0=pyhd3eb1b0_1
+setuptools=51.1.2=py38haa95532_4
+simplejson=3.17.2=pypi_0
+sip=4.19.13=py38ha925a31_0
+six=1.15.0=py38haa95532_0
+sqlite=3.33.0=h2a8f88b_0
+ta-lib=0.4.19=pypi_0
+terminado=0.9.2=py38haa95532_0
+testpath=0.4.4=py_0
+tk=8.6.10=he774522_0
+tornado=6.1=py38h2bbff1b_0
+traitlets=5.0.5=py_0
+tulipy=0.4.0=pypi_0
+urllib3=1.26.2=pyhd3eb1b0_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wcwidth=0.2.5=py_0
+webencodings=0.5.1=py38_1
+wheel=0.36.2=pyhd3eb1b0_0
+win_inet_pton=1.1.0=py38haa95532_0
+wincertstore=0.2=py38_0
+winpty=0.4.3=4
+xlrd=2.0.1=pyhd3eb1b0_0
+xz=5.2.5=h62dcd97_0
+zeromq=4.3.3=ha925a31_3
+zipp=3.4.0=pyhd3eb1b0_0
+zlib=1.2.11=h62dcd97_4
+zstd=1.4.5=h04227a9_0
