--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
+# conda list -e > requirements.txt
 argon2-cffi=20.1.0=py38he774522_1
 async_generator=1.10=py_0
 attrs=20.3.0=pyhd3eb1b0_0
@@ -44,6 +45,7 @@ kiwisolver=1.3.0=py38hd77b12b_0
 libpng=1.6.37=h2a8f88b_0
 libsodium=1.0.18=h62dcd97_0
 libtiff=4.1.0=h56a325e_1
+lxml=4.6.2=pypi_0
 lz4-c=1.9.2=hf4a77e7_3
 m2w64-gcc-libgfortran=5.3.0=6
 m2w64-gcc-libs=5.3.0=7
@@ -59,6 +61,7 @@ mkl-service=2.3.0=py38h196d8e1_0
 mkl_fft=1.2.0=py38h45dec08_0
 mkl_random=1.1.1=py38h47e9c7a_0
 msys2-conda-epoch=20160418=1
+multitasking=0.0.9=pypi_0
 nbclient=0.5.1=py_0
 nbconvert=6.0.7=py38_0
 nbformat=5.0.8=py_0
@@ -71,6 +74,7 @@ openpyxl=3.0.5=py_0
 openssl=1.1.1i=h2bbff1b_0
 packaging=20.8=pyhd3eb1b0_0
 pandas=1.2.0=py38hf11a4ad_0
+pandas-datareader=0.9.0=pypi_0
 pandoc=2.11=h9490d1a_0
 pandocfilters=1.4.3=py38haa95532_1
 parso=0.8.1=pyhd3eb1b0_0
@@ -93,6 +97,7 @@ python-dateutil=2.8.1=py_0
 pytz=2020.5=pyhd3eb1b0_0
 pywin32=227=py38he774522_1
 pywinpty=0.5.7=py38_0
+pyxlsb=1.0.7=pypi_0
 pyzmq=20.0.0=py38hd77b12b_1
 qt=5.9.7=vc14h73c81de_0
 requests=2.25.1=pyhd3eb1b0_0
@@ -120,7 +125,13 @@ wincertstore=0.2=py38_0
 winpty=0.4.3=4
 xlrd=2.0.1=pyhd3eb1b0_0
 xz=5.2.5=h62dcd97_0
+yfinance=0.1.55=pypi_0
 zeromq=4.3.3=ha925a31_3
 zipp=3.4.0=pyhd3eb1b0_0
 zlib=1.2.11=h62dcd97_4
 zstd=1.4.5=h04227a9_0
+
+pandas~=1.2.0
+openpyxl~=3.0.5
+requests~=2.25.1
+yfinance~=0.1.55
