--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-# conda list -e > requirements.txt
 argon2-cffi=20.1.0=py38he774522_1
 async_generator=1.10=py_0
 attrs=20.3.0=pyhd3eb1b0_0
 backcall=0.2.0=py_0
+beautifulsoup4=4.9.3=pyhb0f4dca_0
 blas=1.0=mkl
 bleach=3.2.1=py_0
 brotlipy=0.7.0=py38h2bbff1b_1003
@@ -22,6 +22,7 @@ entrypoints=0.3=py38_0
 et_xmlfile=1.0.1=py_1001
 freetype=2.10.4=hd328e21_0
 futu-api=3.27.2=pypi_0
+html5lib=1.1=py_0
 icu=58.2=ha925a31_3
 idna=2.10=py_0
 importlib-metadata=2.0.0=py_1
@@ -89,6 +90,7 @@ pycryptodome=3.9.9=pypi_0
 pygments=2.7.3=pyhd3eb1b0_0
 pyopenssl=20.0.1=pyhd3eb1b0_1
 pyparsing=2.4.7=py_0
+pypiwin32=223=pypi_0
 pyqt=5.9.2=py38ha925a31_4
 pyrsistent=0.17.3=py38he774522_0
 pysocks=1.7.1=py38haa95532_0
@@ -106,6 +108,7 @@ setuptools=51.1.2=py38haa95532_4
 simplejson=3.17.2=pypi_0
 sip=4.19.13=py38ha925a31_0
 six=1.15.0=py38haa95532_0
+soupsieve=2.1=pyhd3eb1b0_0
 sqlite=3.33.0=h2a8f88b_0
 ta-lib=0.4.19=pypi_0
 terminado=0.9.2=py38haa95532_0
@@ -120,6 +123,7 @@ vs2015_runtime=14.27.29016=h5e58377_2
 wcwidth=0.2.5=py_0
 webencodings=0.5.1=py38_1
 wheel=0.36.2=pyhd3eb1b0_0
+win10toast=0.9=pypi_0
 win_inet_pton=1.1.0=py38haa95532_0
 wincertstore=0.2=py38_0
 winpty=0.4.3=4
@@ -130,8 +134,3 @@ zeromq=4.3.3=ha925a31_3
 zipp=3.4.0=pyhd3eb1b0_0
 zlib=1.2.11=h62dcd97_4
 zstd=1.4.5=h04227a9_0
-
-pandas~=1.2.0
-openpyxl~=3.0.5
-requests~=2.25.1
-yfinance~=0.1.55
