Update Config.ini with stock list option
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/config_template.ini
+++ b/config_template.ini
@@ -18,6 +18,7 @@ Database_path = ./database/stock_data.sqlite
 
 [TradePreference]
 Lot_size_multiplier = 1
+StockList = ["HK.00001", "HK.00002"]
 
 [Backtesting.Commission.HK]
 Fixed_Charge = 15.5
