--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,13 @@ cryptography=3.3.1=py38hcd4344a_0
 cycler=0.10.0=py38_0
 decorator=4.4.2=py_0
 defusedxml=0.6.0=py_0
+empyrical=0.5.5=pypi_0
 entrypoints=0.3=py38_0
 et_xmlfile=1.0.1=py_1001
 freetype=2.10.4=hd328e21_0
 futu-api=3.27.2=pypi_0
 html5lib=1.1=py_0
+humanize=3.2.0=pypi_0
 icu=58.2=ha925a31_3
 idna=2.10=py_0
 importlib-metadata=2.0.0=py_1
@@ -34,6 +36,7 @@ ipython_genutils=0.2.0=pyhd3eb1b0_1
 jdcal=1.4.1=py_0
 jedi=0.17.0=py38_0
 jinja2=2.11.2=py_0
+joblib=1.0.0=pypi_0
 jpeg=9b=hb83a4c4_2
 json5=0.9.5=py_0
 jsonschema=3.2.0=py_2
@@ -87,6 +90,7 @@ prompt-toolkit=3.0.8=py_0
 protobuf=3.5.1=pypi_0
 pycparser=2.20=py_2
 pycryptodome=3.9.9=pypi_0
+pyfolio=0.9.2=pypi_0
 pygments=2.7.3=pyhd3eb1b0_0
 pyopenssl=20.0.1=pyhd3eb1b0_1
 pyparsing=2.4.7=py_0
@@ -103,6 +107,9 @@ pyxlsb=1.0.7=pypi_0
 pyzmq=20.0.0=py38hd77b12b_1
 qt=5.9.7=vc14h73c81de_0
 requests=2.25.1=pyhd3eb1b0_0
+scikit-learn=0.24.1=pypi_0
+scipy=1.6.0=pypi_0
+seaborn=0.11.1=pypi_0
 send2trash=1.5.0=pyhd3eb1b0_1
 setuptools=51.1.2=py38haa95532_4
 simplejson=3.17.2=pypi_0
@@ -113,6 +120,7 @@ sqlite=3.33.0=h2a8f88b_0
 ta-lib=0.4.19=pypi_0
 terminado=0.9.2=py38haa95532_0
 testpath=0.4.4=py_0
+threadpoolctl=2.1.0=pypi_0
 tk=8.6.10=he774522_0
 tornado=6.1=py38h2bbff1b_0
 traitlets=5.0.5=py_0
@@ -134,12 +142,3 @@ zeromq=4.3.3=ha925a31_3
 zipp=3.4.0=pyhd3eb1b0_0
 zlib=1.2.11=h62dcd97_4
 zstd=1.4.5=h04227a9_0
-
-pandas~=1.2.0
-openpyxl~=3.0.5
-requests~=2.25.1
-yfinance~=0.1.55
-win10toast~=0.9
-numpy~=1.19.3
-humanize~=3.2.0
-pyfolio~=0.9.2
