--- a/futu_algo.yml
+++ b/futu_algo.yml
@@ -122,17 +122,28 @@ dependencies:
   - zlib=1.2.11=h62dcd97_4
   - zstd=1.4.5=h04227a9_0
   - pip:
-      - futu-api==3.27.2
+      - backtesting==0.3.1
+      - bokeh==2.3.0
+      - empyrical==0.5.5
+      - futu-api==5.2.1408
+      - humanize==3.2.0
+      - joblib==1.0.0
       - lxml==4.6.2
       - multitasking==0.0.9
       - numpy==1.19.3
       - pandas-datareader==0.9.0
       - protobuf==3.5.1
       - pycryptodome==3.9.9
+      - pyfolio==0.9.2
       - pypiwin32==223
       - pyxlsb==1.0.7
+      - pyyaml==5.4.1
+      - scikit-learn==0.24.1
+      - scipy==1.6.0
+      - seaborn==0.11.1
       - simplejson==3.17.2
       - ta-lib==0.4.19
+      - threadpoolctl==2.1.0
       - tulipy==0.4.0
-      - win10toast==0.9
+      - typing-extensions==3.7.4.3
       - yfinance==0.1.55
