--- a/config_template.ini
+++ b/config_template.ini
@@ -17,16 +17,17 @@ SubscribedDataFormat = None
 Database_path = ./database/stock_data.sqlite
 
 [TradePreference]
-Lot_size_multiplier = 1
+LotSizeMultiplier = 2
+MaxPercPerAsset = 10
 StockList = ["HK.00001", "HK.00002"]
 
 [Backtesting.Commission.HK]
-Fixed_Charge = 15.5
-Perc_Charge = 0.1097
+FixedCharge = 15.5
+PercCharge = 0.1097
 
 [Email]
 Port = 587
-Smtp_server = smtp-mail.example.com
+SmtpServer = smtp-mail.example.com
 Sender = johndoe@example.com
 Login = johndoe@example.com
 Password = Password13579
