--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ backcall=0.2.0=py_0
 backtesting=0.3.1=pypi_0
 beautifulsoup4=4.9.3=pyhb0f4dca_0
 blas=1.0=mkl
-bleach=3.2.1=py_0
+bleach=3.3.0=pypi_0
 bokeh=2.3.0=pypi_0
 brotlipy=0.7.0=py38h2bbff1b_1003
 ca-certificates=2020.12.8=haa95532_0
@@ -16,7 +16,7 @@ certifi=2020.12.5=py38haa95532_0
 cffi=1.14.4=py38hcd4344a_0
 chardet=4.0.0=py38haa95532_1003
 colorama=0.4.4=pyhd3eb1b0_0
-cryptography=3.3.1=py38hcd4344a_0
+cryptography=3.4.7=pypi_0
 cycler=0.10.0=py38_0
 decorator=4.4.2=py_0
 defusedxml=0.6.0=py_0
@@ -37,7 +37,7 @@ ipython=7.19.0=py38hd4e2768_0
 ipython_genutils=0.2.0=pyhd3eb1b0_1
 jdcal=1.4.1=py_0
 jedi=0.17.0=py38_0
-jinja2=2.11.2=py_0
+jinja2=2.11.3=pypi_0
 joblib=1.0.0=pypi_0
 jpeg=9b=hb83a4c4_2
 json5=0.9.5=py_0
@@ -51,7 +51,7 @@ kiwisolver=1.3.0=py38hd77b12b_0
 libpng=1.6.37=h2a8f88b_0
 libsodium=1.0.18=h62dcd97_0
 libtiff=4.1.0=h56a325e_1
-lxml=4.6.2=pypi_0
+lxml=4.6.3=pypi_0
 lz4-c=1.9.2=hf4a77e7_3
 m2w64-gcc-libgfortran=5.3.0=6
 m2w64-gcc-libs=5.3.0=7
@@ -93,7 +93,7 @@ protobuf=3.5.1=pypi_0
 pycparser=2.20=py_2
 pycryptodome=3.9.9=pypi_0
 pyfolio=0.9.2=pypi_0
-pygments=2.7.3=pyhd3eb1b0_0
+pygments=2.8.1=pypi_0
 pyopenssl=20.0.1=pyhd3eb1b0_1
 pyparsing=2.4.7=py_0
 pypiwin32=223=pypi_0
@@ -129,7 +129,7 @@ tornado=6.1=py38h2bbff1b_0
 traitlets=5.0.5=py_0
 tulipy=0.4.0=pypi_0
 typing-extensions=3.7.4.3=pypi_0
-urllib3=1.26.2=pyhd3eb1b0_0
+urllib3=1.26.4=pypi_0
 vc=14.2=h21ff451_1
 vs2015_runtime=14.27.29016=h5e58377_2
 wcwidth=0.2.5=py_0
