--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,103 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-argon2-cffi=20.1.0=py38he774522_1
-async_generator=1.10=py_0
+argon2-cffi=20.1.0=py38h2bbff1b_1
+async_generator=1.10=pyhd3eb1b0_0
 attrs=20.3.0=pyhd3eb1b0_0
-backcall=0.2.0=py_0
+backcall=0.2.0=pyhd3eb1b0_0
 backtesting=0.3.1=pypi_0
 beautifulsoup4=4.9.3=pyhb0f4dca_0
 blas=1.0=mkl
-bleach=3.3.0=pypi_0
+bleach=3.3.0=pyhd3eb1b0_0
 bokeh=2.3.0=pypi_0
 brotlipy=0.7.0=py38h2bbff1b_1003
-ca-certificates=2020.12.8=haa95532_0
+ca-certificates=2021.4.13=haa95532_1
 certifi=2020.12.5=py38haa95532_0
-cffi=1.14.4=py38hcd4344a_0
+cffi=1.14.5=py38hcd4344a_0
 chardet=4.0.0=py38haa95532_1003
 colorama=0.4.4=pyhd3eb1b0_0
-cryptography=3.4.7=pypi_0
-cycler=0.10.0=py38_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
+cryptography=3.4.7=py38h71e12ea_0
+cx-freeze=6.6=pypi_0
+cx-logging=3.0=pypi_0
+decorator=5.0.6=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
 empyrical=0.5.5=pypi_0
 entrypoints=0.3=py38_0
 et_xmlfile=1.0.1=py_1001
-freetype=2.10.4=hd328e21_0
 futu-api=5.2.1408=pypi_0
 html5lib=1.1=py_0
 humanize=3.2.0=pypi_0
 icu=58.2=ha925a31_3
-idna=2.10=py_0
-importlib-metadata=2.0.0=py_1
-importlib_metadata=2.0.0=1
-intel-openmp=2020.2=254
+idna=2.10=pyhd3eb1b0_0
+importlib-metadata=4.0.1=pypi_0
+importlib_metadata=3.10.0=hd3eb1b0_0
+intel-openmp=2021.2.0=haa95532_616
 ipykernel=5.3.4=py38h5ca1d4c_0
-ipython=7.19.0=py38hd4e2768_0
+ipython=7.22.0=py38hd4e2768_0
 ipython_genutils=0.2.0=pyhd3eb1b0_1
 jdcal=1.4.1=py_0
 jedi=0.17.0=py38_0
-jinja2=2.11.3=pypi_0
+jinja2=2.11.3=pyhd3eb1b0_0
 joblib=1.0.0=pypi_0
 jpeg=9b=hb83a4c4_2
 json5=0.9.5=py_0
 jsonschema=3.2.0=py_2
-jupyter_client=6.1.7=py_0
-jupyter_core=4.7.0=py38haa95532_0
+jupyter_client=6.1.12=pyhd3eb1b0_0
+jupyter_core=4.7.1=py38haa95532_0
 jupyterlab=2.2.6=py_0
 jupyterlab_pygments=0.1.2=py_0
 jupyterlab_server=1.2.0=py_0
-kiwisolver=1.3.0=py38hd77b12b_0
 libpng=1.6.37=h2a8f88b_0
 libsodium=1.0.18=h62dcd97_0
-libtiff=4.1.0=h56a325e_1
 lxml=4.6.3=pypi_0
-lz4-c=1.9.2=hf4a77e7_3
 m2w64-gcc-libgfortran=5.3.0=6
 m2w64-gcc-libs=5.3.0=7
 m2w64-gcc-libs-core=5.3.0=7
 m2w64-gmp=6.1.0=2
 m2w64-libwinpthread-git=5.0.0.4634.697f757=2
 markupsafe=1.1.1=py38he774522_0
-matplotlib=3.3.2=haa95532_0
-matplotlib-base=3.3.2=py38hba9282a_0
 mistune=0.8.4=py38he774522_1000
-mkl=2020.2=256
-mkl-service=2.3.0=py38h196d8e1_0
-mkl_fft=1.2.0=py38h45dec08_0
-mkl_random=1.1.1=py38h47e9c7a_0
+mkl=2021.2.0=haa95532_296
+mkl-service=2.3.0=py38h2bbff1b_1
+mkl_fft=1.3.0=py38h277e83a_2
+mkl_random=1.2.1=py38hf11a4ad_2
 msys2-conda-epoch=20160418=1
 multitasking=0.0.9=pypi_0
-nbclient=0.5.1=py_0
+nbclient=0.5.3=pyhd3eb1b0_0
 nbconvert=6.0.7=py38_0
-nbformat=5.0.8=py_0
-nest-asyncio=1.4.3=pyhd3eb1b0_0
-notebook=6.1.6=py38haa95532_0
+nbformat=5.1.3=pyhd3eb1b0_0
+nest-asyncio=1.5.1=pyhd3eb1b0_0
+notebook=6.3.0=py38haa95532_0
 numpy=1.19.3=pypi_0
-numpy-base=1.19.2=py38ha3acd2a_0
-olefile=0.46=py_0
+numpy-base=1.20.1=py38haf7ebc8_0
 openpyxl=3.0.5=py_0
-openssl=1.1.1i=h2bbff1b_0
-packaging=20.8=pyhd3eb1b0_0
+openssl=1.1.1k=h2bbff1b_0
+packaging=20.9=pyhd3eb1b0_0
 pandas=1.2.0=py38hf11a4ad_0
 pandas-datareader=0.9.0=pypi_0
-pandoc=2.11=h9490d1a_0
+pandoc=2.12=haa95532_0
 pandocfilters=1.4.3=py38haa95532_1
-parso=0.8.1=pyhd3eb1b0_0
+parso=0.8.2=pyhd3eb1b0_0
 pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=8.1.0=py38h4fa10fc_0
-pip=20.3.3=py38haa95532_0
-prometheus_client=0.9.0=pyhd3eb1b0_0
-prompt-toolkit=3.0.8=py_0
+pip=21.1.1=pypi_0
+prometheus_client=0.10.1=pyhd3eb1b0_0
+prompt-toolkit=3.0.17=pyh06a4308_0
 protobuf=3.5.1=pypi_0
 pycparser=2.20=py_2
 pycryptodome=3.9.9=pypi_0
 pyfolio=0.9.2=pypi_0
-pygments=2.8.1=pypi_0
+pygments=2.8.1=pyhd3eb1b0_0
 pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=py_0
+pyparsing=2.4.7=pyhd3eb1b0_0
 pypiwin32=223=pypi_0
-pyqt=5.9.2=py38ha925a31_4
+pyqt5-qt5=5.15.2=pypi_0
+pyqt5-sip=12.8.1=pypi_0
 pyrsistent=0.17.3=py38he774522_0
+pyside6=6.0.3=pypi_0
 pysocks=1.7.1=py38haa95532_0
-python=3.8.5=h5fd99cc_1
-python-dateutil=2.8.1=py_0
-pytz=2020.5=pyhd3eb1b0_0
+python=3.8.8=hdbf39b2_5
+python-dateutil=2.8.1=pyhd3eb1b0_0
+pytz=2021.1=pyhd3eb1b0_0
 pywin32=227=py38he774522_1
 pywinpty=0.5.7=py38_0
 pyxlsb=1.0.7=pypi_0
@@ -114,22 +109,22 @@ scikit-learn=0.24.1=pypi_0
 scipy=1.6.0=pypi_0
 seaborn=0.11.1=pypi_0
 send2trash=1.5.0=pyhd3eb1b0_1
-setuptools=51.1.2=py38haa95532_4
+setuptools=52.0.0=py38haa95532_0
+shiboken6=6.0.3=pypi_0
 simplejson=3.17.2=pypi_0
-sip=4.19.13=py38ha925a31_0
 six=1.15.0=py38haa95532_0
-soupsieve=2.1=pyhd3eb1b0_0
-sqlite=3.33.0=h2a8f88b_0
+soupsieve=2.2.1=pyhd3eb1b0_0
+sqlite=3.35.4=h2bbff1b_0
 ta-lib=0.4.19=pypi_0
-terminado=0.9.2=py38haa95532_0
-testpath=0.4.4=py_0
+terminado=0.9.4=py38haa95532_0
+testpath=0.4.4=pyhd3eb1b0_0
 threadpoolctl=2.1.0=pypi_0
-tk=8.6.10=he774522_0
 tornado=6.1=py38h2bbff1b_0
-traitlets=5.0.5=py_0
+tqdm=4.59.0=pypi_0
+traitlets=5.0.5=pyhd3eb1b0_0
 tulipy=0.4.0=pypi_0
 typing-extensions=3.7.4.3=pypi_0
-urllib3=1.26.4=pypi_0
+urllib3=1.26.4=pyhd3eb1b0_0
 vc=14.2=h21ff451_1
 vs2015_runtime=14.27.29016=h5e58377_2
 wcwidth=0.2.5=py_0
@@ -139,9 +134,7 @@ win_inet_pton=1.1.0=py38haa95532_0
 wincertstore=0.2=py38_0
 winpty=0.4.3=4
 xlrd=2.0.1=pyhd3eb1b0_0
-xz=5.2.5=h62dcd97_0
 yfinance=0.1.55=pypi_0
 zeromq=4.3.3=ha925a31_3
-zipp=3.4.0=pyhd3eb1b0_0
+zipp=3.4.1=pyhd3eb1b0_0
 zlib=1.2.11=h62dcd97_4
-zstd=1.4.5=h04227a9_0
