Update Github Actions
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -3,8 +3,8 @@ name: Python Package using Conda
 on: [push]
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  build-ubuntu:
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
 
