--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env create -f environment.yml
+        conda create --name futu_trade --file requirements.txt
     - name: Test with Python
       run: |
         python main_backend.py
