--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [windows-latest]
         python-version: [3.6, 3.7, 3.8]
     name: Python ${{ matrix.python-version }} example
     steps:
@@ -20,4 +20,4 @@ jobs:
           conda-channels: anaconda, conda-forge
       - run: conda --version
       - run: conda install pip -y
-      - run: conda install --file requirements.txt -y
+      - run: FOR /F "delims=~" %f in (requirements.txt) DO conda install --yes "%f" || pip install "%f"
