--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -2,6 +2,10 @@ name: Python Package using Conda
 
 on: [push]
 
+defaults:
+  run:
+    shell: bash
+    
 jobs:
   build:
     runs-on: ${{ matrix.os }}
