--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - blas=1.0=mkl
   - brotlipy=0.7.0=py38h2bbff1b_1003
   - ca-certificates=2022.3.29=haa95532_0
-  - certifi=2021.10.8=py38haa95532_2
+  - certifi=2020.12.5=py38haa95532_0
   - cffi=1.14.5=py38hcd4344a_0
   - chardet=4.0.0=py38haa95532_1003
   - colorama=0.4.4=pyhd3eb1b0_0
@@ -22,7 +22,6 @@ dependencies:
   - mkl-service=2.3.0=py38h2bbff1b_1
   - mkl_fft=1.3.0=py38h277e83a_2
   - mkl_random=1.2.1=py38hf11a4ad_2
-  - numpy-base=1.20.1=py38haf7ebc8_0
   - openpyxl=3.0.5=py_0
   - openssl=1.1.1n=h2bbff1b_0
   - pandas=1.2.0=py38hf11a4ad_0
@@ -32,7 +31,6 @@ dependencies:
   - python=3.8.8=hdbf39b2_5
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - pytz=2021.1=pyhd3eb1b0_0
-  - requests=2.25.1=pyhd3eb1b0_0
   - six=1.15.0=py38haa95532_0
   - soupsieve=2.2.1=pyhd3eb1b0_0
   - sqlite=3.35.4=h2bbff1b_0
@@ -48,9 +46,12 @@ dependencies:
   - zipp=3.4.1=pyhd3eb1b0_0
   - pip:
       - asttokens==2.0.5
+      - atomicwrites==1.4.0
+      - attrs==21.4.0
       - backcall==0.2.0
       - backtesting==0.3.1
       - bokeh==2.3.0
+      - charset-normalizer==2.0.12
       - cx-freeze==6.6
       - cx-logging==3.0
       - cycler==0.11.0
@@ -62,6 +63,7 @@ dependencies:
       - fonttools==4.31.2
       - futu-api==6.1.2608
       - importlib-metadata==4.0.1
+      - iniconfig==1.1.1
       - ipython==8.1.1
       - jedi==0.18.1
       - jinja2==3.1.0
@@ -81,10 +83,12 @@ dependencies:
       - pillow==9.0.1
       - pip==22.0.4
       - pipreqs==0.4.10
+      - pluggy==1.0.0
       - prompt-toolkit==3.0.28
       - protobuf==3.5.1
       - psutil==5.9.0
       - pure-eval==0.2.2
+      - py==1.11.0
       - pycryptodome==3.9.9
       - pyfolio==0.9.2
       - pygments==2.11.2
@@ -94,9 +98,11 @@ dependencies:
       - pyqt5-sip==12.8.1
       - pyqtgraph==0.12.1
       - pyside6==6.0.3
+      - pytest==7.1.1
       - pywin32==303
       - pyxlsb==1.0.7
       - pyyaml==5.4.1
+      - requests==2.27.1
       - scikit-learn==1.0.2
       - scipy==1.6.0
       - seaborn==0.11.2
@@ -105,6 +111,7 @@ dependencies:
       - simplejson==3.17.2
       - stack-data==0.2.0
       - threadpoolctl==2.1.0
+      - tomli==2.0.1
       - tornado==6.1
       - tqdm==4.59.0
       - traitlets==5.1.1
@@ -114,4 +121,4 @@ dependencies:
       - wcwidth==0.2.5
       - wrapt==1.13.3
       - yarg==0.1.9
-      - yfinance==0.1.59
+      - yfinance==0.1.70
