--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,8 @@
-asttokens==2.0.5
-atomicwrites==1.4.0
-attrs==21.4.0
-backcall==0.2.0
-Backtesting==0.3.1
-beautifulsoup4==4.9.3
-bokeh==2.3.0
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-charset-normalizer==2.0.12
-colorama==0.4.4
-cryptography==3.4.7
-cx-Freeze==6.6
-cx-Logging==3.0
-cycler==0.11.0
-decorator==5.1.1
-Deprecated==1.2.13
-docopt==0.6.2
-empyrical==0.5.5
-et-xmlfile==1.0.1
-executing==0.8.3
-fonttools==4.31.2
-futu-api==6.1.2608
-html5lib==1.1
-humanize==3.5.0
-idna==2.10
-importlib-metadata==4.0.1
-iniconfig==1.1.1
-ipython==8.1.1
-jdcal==1.4.1
-jedi==0.18.1
-Jinja2==3.1.0
-joblib==1.0.0
-kids.cache==0.0.7
-kiwisolver==1.4.0
-lxml==4.6.3
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
-multitasking==0.0.9
-numpy==1.19.3
-openpyxl==3.0.5
-packaging==21.3
-pandas==1.2.0
-pandas-datareader==0.9.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.0.1
-pip==22.0.4
-pipreqs==0.4.10
-pluggy==1.0.0
-prompt-toolkit==3.0.28
-protobuf==3.5.1
-psutil==5.9.0
-pure-eval==0.2.2
-py==1.11.0
-pycparser==2.20
-pycryptodome==3.9.9
-pyfolio==0.9.2
-Pygments==2.11.2
-pyOpenSSL==20.0.1
-pyparsing==3.0.7
-pypiwin32==223
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.8.1
-pyqtgraph==0.12.1
-PySide6==6.0.3
-PySocks==1.7.1
-pytest==7.1.1
-python-dateutil==2.8.1
-pytz==2021.1
-pywin32==303
-pyxlsb==1.0.7
-PyYAML==5.4.1
-requests==2.27.1
-scikit-learn==1.0.2
-scipy==1.6.0
-seaborn==0.11.2
-setuptools==56.2.0
-shiboken6==6.0.3
-simplejson==3.17.2
-six==1.15.0
-soupsieve==2.2.1
-stack-data==0.2.0
-threadpoolctl==2.1.0
-tomli==2.0.1
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.1.1
-tulipy==0.4.0
-typing==3.7.4
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-wcwidth==0.2.5
-webencodings==0.5.1
-wheel==0.36.2
-win-inet-pton==1.1.0
-wincertstore==0.2
-wrapt==1.13.3
-xlrd==2.0.1
-yarg==0.1.9
-yfinance==0.1.70
-zipp==3.4.1
+humanize
+openpyxl
+pandas
+requests
+yfinance
+deprecated
+psutil
+futu-api
