--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,11 @@ cython_debug/
 !/data/HK.09988/HK.09988_2022-04-13_1M.csv
 !/data/HK.09988/HK.09988_2021_1D.csv
 !/data/HK.09988/HK.09988_2022_1W.csv
+!/data/HK.00700/HK.00700_2022-04-11_1M.csv
+!/data/HK.00700/HK.00700_2022-04-12_1M.csv
+!/data/HK.00700/HK.00700_2022-04-13_1M.csv
+!/data/HK.00700/HK.00700_2021_1D.csv
+!/data/HK.00700/HK.00700_2022_1W.csv
 config.ini
 stock_strategy_map.yml
 
