[Data] Update Strategy Test
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,5 @@ stock_strategy_map.yml
 /backtesting_report/*
 /stock_filter_report/*
 
-# Test
-/test/test_strategy_private.py
+# Tests
+!/test/test_strategy_private.py
