--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users first issue'
-        pr-message: 'Message that will be displayed on users first pull request'
+        issue-message: 'Hello @${{ github.actor }} , thank you for submitting an issue! 👍 We highly appreciate it if you work on it as well.'
+        pr-message: 'Hello @${{ github.actor }} , thank you for submitting a pull request, we appreciate it a lot! If you feel this repository helped you to achieve your goals, warm us with a cup of :coffee:.  🙂'
