[Data] Update File Format from CSV to Parquet
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -141,16 +141,16 @@ cython_debug/
 
 /.idea
 /data/*/*.*
-!/data/HK.09988/HK.09988_2022-04-11_1M.csv
-!/data/HK.09988/HK.09988_2022-04-12_1M.csv
-!/data/HK.09988/HK.09988_2022-04-13_1M.csv
-!/data/HK.09988/HK.09988_2021_1D.csv
-!/data/HK.09988/HK.09988_2022_1W.csv
-!/data/HK.00700/HK.00700_2022-04-11_1M.csv
-!/data/HK.00700/HK.00700_2022-04-12_1M.csv
-!/data/HK.00700/HK.00700_2022-04-13_1M.csv
-!/data/HK.00700/HK.00700_2021_1D.csv
-!/data/HK.00700/HK.00700_2022_1W.csv
+!/data/HK.09988/HK.09988_2022-04-11_1M.*
+!/data/HK.09988/HK.09988_2022-04-12_1M.*
+!/data/HK.09988/HK.09988_2022-04-13_1M.*
+!/data/HK.09988/HK.09988_2021_1D.*
+!/data/HK.09988/HK.09988_2022_1W.*
+!/data/HK.00700/HK.00700_2022-04-11_1M.*
+!/data/HK.00700/HK.00700_2022-04-12_1M.*
+!/data/HK.00700/HK.00700_2022-04-13_1M.*
+!/data/HK.00700/HK.00700_2021_1D.*
+!/data/HK.00700/HK.00700_2022_1W.*
 config.ini
 stock_strategy_map.yml
 
