--- a/config/config_template.ini
+++ b/config/config_template.ini
@@ -4,6 +4,7 @@ Port = 11111
 WebSocketPort = 33333
 WebSocketKey = 3e1d3hu5i4kf8s9d
 TrdEnv = SIMULATE
+RsaPrivateKey = C:\futu_algo\config\rsa.key
 
 [FutuOpenD.Credential]
 Username = johndoe
