[Stock Filter] Update TuShare
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/config/config_template.ini
+++ b/config/config_template.ini
@@ -30,3 +30,6 @@ Sender = johndoe@example.com
 Login = johndoe@example.com
 Password = Password13579
 SubscriptionList = ["example1@example.com", "example2@example.com"]
+
+[TuShare.Credential]
+token = 2134342ABC2D03780772038A7816
