[Main] Update Conda Env and necessary files
Signed-off-by: Bill Chan <billpwchan@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,10 @@ cython_debug/
 !/data/HK.00700/HK.00700_2022-04-13_1M.*
 !/data/HK.00700/HK.00700_2021_1D.*
 !/data/HK.00700/HK.00700_2022_1W.*
+!/data/Stock_Pool/ListOfSecurities.*
+!/data/Stock_Pool/stock_basic_info.parquet
+!/data/Stock_Pool/stock_owner_plate.parquet
+!/data/Stock_Pool/stock_plate_list.parquet
 config/config.ini
 config/stock_strategy_map.yml
 
