--- a/environment.yml
+++ b/environment.yml
@@ -2,56 +2,59 @@ name: futu_trade
 channels:
   - defaults
 dependencies:
-  - beautifulsoup4=4.9.3
-  - blas=1.0
-  - brotlipy=0.7.0
-  - ca-certificates=2022.3.29
-  - certifi=2021.10.8
-  - cffi=1.14.5
-  - chardet=4.0.0
-  - colorama=0.4.4
-  - cryptography=3.4.7
-  - et_xmlfile=1.0.1
-  - html5lib=1.1
-  - humanize=3.10.0
-  - idna=2.10
-  - importlib_metadata=3.10.0
-  - intel-openmp=2021.2.0
-  - jdcal=1.4.1
-  - mkl=2021.2.0
-  - mkl-service=2.3.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.2.1
-  - numpy-base=1.20.1
-  - openpyxl=3.0.5
-  - openssl=1.1.1n
-  - pandas=1.2.0
-  - pycparser=2.20
-  - pyopenssl=20.0.1
-  - pysocks=1.7.1
-  - python=3.8.8
-  - python-dateutil=2.8.1
-  - pytz=2021.1
-  - six=1.15.0
-  - soupsieve=2.2.1
-  - sqlite=3.35.4
-  - urllib3=1.26.4
-  - vc=14.2
-  - vs2015_runtime=14.27.29016
-  - webencodings=0.5.1
-  - wheel=0.36.2
-  - win_inet_pton=1.1.0
-  - wincertstore=0.2
-  - xlrd=2.0.1
-  - zipp=3.4.1
+  - blas=1.0=mkl
+  - brotlipy=0.7.0=py38h2bbff1b_1003
+  - ca-certificates=2023.01.10=haa95532_0
+  - certifi=2022.12.7=py38haa95532_0
+  - cffi=1.14.5=py38hcd4344a_0
+  - chardet=4.0.0=py38haa95532_1003
+  - colorama=0.4.4=pyhd3eb1b0_0
+  - cryptography=3.4.7=py38h71e12ea_0
+  - et_xmlfile=1.0.1=py_1001
+  - flit-core=3.6.0=pyhd3eb1b0_0
+  - html5lib=1.1=py_0
+  - idna=2.10=pyhd3eb1b0_0
+  - importlib_metadata=3.10.0=hd3eb1b0_0
+  - intel-openmp=2021.2.0=haa95532_616
+  - jdcal=1.4.1=py_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
+  - mkl=2021.2.0=haa95532_296
+  - mkl-service=2.3.0=py38h2bbff1b_1
+  - openssl=1.1.1s=h2bbff1b_0
+  - pycparser=2.20=py_2
+  - pyopenssl=20.0.1=pyhd3eb1b0_1
+  - pysocks=1.7.1=py38haa95532_0
+  - python=3.8.8=hdbf39b2_5
+  - python-dateutil=2.8.1=pyhd3eb1b0_0
+  - six=1.15.0=py38haa95532_0
+  - soupsieve=2.2.1=pyhd3eb1b0_0
+  - sqlite=3.35.4=h2bbff1b_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - typing_extensions=4.4.0=py38haa95532_0
+  - urllib3=1.26.4=pyhd3eb1b0_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - webencodings=0.5.1=py38_1
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py38haa95532_0
+  - wincertstore=0.2=py38_0
+  - wrapt=1.13.3=py38h2bbff1b_2
+  - xlrd=2.0.1=pyhd3eb1b0_0
+  - yaml=0.2.5=he774522_0
+  - zipp=3.4.1=pyhd3eb1b0_0
   - pip:
+      - appdirs==1.4.4
       - astroid==2.11.2
       - asttokens==2.0.5
       - atomicwrites==1.4.0
       - attrs==21.4.0
       - backcall==0.2.0
+      - backtesting==0.3.1
+      - beautifulsoup4==4.11.2
       - bokeh==2.3.0
+      - bs4==0.0.1
       - charset-normalizer==2.0.12
+      - cramjam==2.6.1
       - cx-freeze==6.6
       - cx-logging==3.0
       - cycler==0.11.0
@@ -61,8 +64,11 @@ dependencies:
       - docopt==0.6.2
       - empyrical==0.5.5
       - executing==0.8.3
+      - fastparquet==0.8.3
       - fonttools==4.31.2
-      - futu-api==6.1.2608
+      - frozendict==2.3.4
+      - fsspec==2022.10.0
+      - futu-api==7.0.3208
       - importlib-metadata==4.0.1
       - iniconfig==1.1.1
       - ipython==8.1.1
@@ -73,19 +79,20 @@ dependencies:
       - kids-cache==0.0.7
       - kiwisolver==1.4.0
       - lazy-object-proxy==1.7.1
-      - lxml==4.6.3
+      - lxml==4.9.2
       - markupsafe==2.1.1
       - matplotlib==3.5.1
       - matplotlib-inline==0.1.3
-      - mccabe==0.7.0
       - multitasking==0.0.9
-      - numpy==1.19.3
+      - numpy==1.24.1
+      - openpyxl==3.0.10
       - packaging==21.3
+      - pandas==1.5.3
       - pandas-datareader==0.9.0
       - parso==0.8.3
       - pickleshare==0.7.5
       - pillow==9.0.1
-      - pip==22.0.4
+      - pip==22.3.1
       - pipreqs==0.4.10
       - platformdirs==2.5.1
       - pluggy==1.0.0
@@ -94,8 +101,9 @@ dependencies:
       - psutil==5.9.0
       - pure-eval==0.2.2
       - py==1.11.0
-      - pyarrow==7.0.0
+      - pyarrow==11.0.0
       - pycryptodome==3.9.9
+      - pyfolio==0.9.2
       - pygments==2.11.2
       - pylint==2.13.5
       - pyparsing==3.0.7
@@ -110,10 +118,12 @@ dependencies:
       - pyside6-addons==6.3.0
       - pyside6-essentials==6.3.0
       - pytest==7.1.1
+      - pytz==2022.7.1
       - pywin32==303
       - pyxlsb==1.0.7
-      - pyyaml==5.4.1
+      - pyyaml==6.0
       - requests==2.27.1
+      - scikit-learn==1.0.2
       - scipy==1.6.0
       - seaborn==0.11.2
       - setuptools==56.2.0
@@ -123,12 +133,13 @@ dependencies:
       - threadpoolctl==2.1.0
       - tomli==2.0.1
       - tornado==6.1
-      - tqdm==4.59.0
+      - tqdm==4.64.1
       - traitlets==5.1.1
       - tulipy==0.4.0
+      - tushare==1.2.89
       - typing==3.7.4
       - typing-extensions==4.1.1
       - wcwidth==0.2.5
-      - wrapt==1.13.3
+      - websocket-client==0.57.0
       - yarg==0.1.9
-      - yfinance==0.1.70
+      - yfinance==0.2.9
